--- a/style.css
+++ b/style.css
@@ -19,6 +19,50 @@ p {
   color: rgb(85, 85, 85);
 }
 
+.toggle-button {
+  width: 0%;
+  height: 100vh;
+  background-color: #ffff;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  position: relative;
+  padding-right: 15px;
+}
+
+.button {
+  background-color: #d2d2d2;
+  width: 70px;
+  height: 30px;
+  border-radius: 200px;
+  cursor: pointer;
+  position: relative;
+  transition: 0.6s;
+}
+
+.button::before {
+  position: absolute;
+  content: "";
+  background-color: #ffff;
+  width: 30px;
+  height: 28px;
+  border-radius: 200px;
+  margin: 1px;
+  transition: 0.6s;
+}
+
+input:checked  + .button{
+background-color: rgb(53, 53, 53);
+}
+
+input:checked + .button::before{
+  transform: translateX(38px);
+}
+
+.toggle-button{
+  display: none;
+}
+
 /* TRANSITION */
 
 a,
@@ -359,12 +403,10 @@ article .icon {
   position: relative;
 }
 
-
 .color-container {
   border-color: rgb(163, 163, 163);
   background: rgb(250, 250, 250); /* Corrected syntax */
 }
-
 
 .project-img {
   border-radius: 2rem;
